# echo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
backend/: main.py  requirements.txt
backend/api/: routes.py
backend/models/: .gitkeep
backend/pipeline/: __init__.py  diarization.py  markdown.py  speaker_id.py  summary.py  translate.py  vad.py  whisper.py
scripts/: start.sh
src/: audio.rs  capture.rs  config.rs  lib.rs  main.rs
