[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.30"
tray-icon = "0.19"
objc = "0.2"
objc_id = "0.1"
cocoa = "0.26"
core-graphics = "0.24"
cpal = "0.15"
ringbuf = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
global-hotkey = "0.6"
notify-rust = "4"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
